Updated POM file with repository URL

--- a/pom.xml
+++ b/pom.xml
@@ -45,15 +45,22 @@
       </plugins>
   </build>
 
-    <distributionManagement>
-        <repository>
-            <id>releases</id>
-            <url>https://mymavenrepo.com/repo/ll2K83CeE3oSdSb0t05n/</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshots</id>
-            <url>https://mymavenrepo.com/repo/ll2K83CeE3oSdSb0t05n/</url>
-        </snapshotRepository>
-    </distributionManagement>
+  <repositories>
+      <repository>
+            <id>myMavenRepo.read</id>
+            <url>https://mymavenrepo.com/repo/6RyBvZULj8OLQt5iMNsj/</url>
+      </repository>
+  </repositories>
+
+  <distributionManagement>
+      <repository>
+          <id>releases</id>
+          <url>https://mymavenrepo.com/repo/ll2K83CeE3oSdSb0t05n/</url>
+      </repository>
+      <snapshotRepository>
+          <id>snapshots</id>
+          <url>https://mymavenrepo.com/repo/ll2K83CeE3oSdSb0t05n/</url>
+      </snapshotRepository>
+  </distributionManagement>
 
 </project>
