--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent any
 
     stages {
+
         stage ('Compile Stage') {
             steps {
                 withMaven(maven: 'maven_3_3_9') {
@@ -18,7 +19,7 @@ pipeline {
             }
         }
 
-        stage ('Test Stage') {
+        stage ('Deployment Stage') {
             steps {
                  withMaven(maven: 'maven_3_3_9') {
                     sh 'mvn deploy'
